chore: add comment for PR simulation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <Meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+    <!--Komentar tambahan untuk tes PR-->
         <header>
             <h1>muh adrian mr</h1>
             <p>Mahasiswa Universitas Muhammadiyah Bone | Prodi Teknologi Pendidikan | Semester 5</p>
